--- a/client/src/app/shared/components/delete-all-message/delete-all-message.component.html
+++ b/client/src/app/shared/components/delete-all-message/delete-all-message.component.html
@@ -1,9 +1,9 @@
 <div class="backdrop"></div>
 
 <div class="tablo">
-    <p class="tc vtablo" appEasyLang>Хотите удалить чат?</p>
+    <p class="tc vtablo" appEasyLang>Хотите удалить {{event ? 'мероприятие' : 'чат'}}?</p>
     <div class="ontablo start-ontablo">
-         <img id="avatar" src="/images/dialog.png">
+         <img id="avatar" src="{{event && event.chatImage ? event && event.chatImage : '/images/dialog.png'}}">
     </div>
     <div class="ontablo" id="strelka"></div>
     <div class="ontablo" id="musorka">
