--- a/client/src/app/shared/layouts/chat-layout/chat-layout.component.html
+++ b/client/src/app/shared/layouts/chat-layout/chat-layout.component.html
@@ -8,8 +8,10 @@
 
                <div id="section" class="light-{{session.secondColor}}-bg">
                     <div id="middle">
+                         <app-loader *ngIf="loading"></app-loader>
                          <div *ngIf="!mesloading; else mesloader">
-                              <div *ngFor="let letter of letters.messagesRead">
+                              <div *ngFor="let letter of letters; let j = index">
+                                   <div *ngIf="j > 0 && !letter.read && letter.sender == id && letters[j-1].read" class="separator" id="separator"></div>
                                    <div *ngIf="letter.sender == session._id" 
                                    class="sender-message message dark-{{session.firstColor}}-border middle-{{session.firstColor}}-bg"
                                    id="{{letter._id}}">
@@ -20,11 +22,11 @@
 
                                              <div *ngIf="letter.type[i] == 2" class="div-in-li">
                                                   <div appEasyLang class="div-text">{{message}}</div>
-                                                  <div class="footer-out">
-                                                       <div class="screenread-btn footer green-cursor" 
-                                                       *ngIf="session.screenreader"
-                                                       (click)="screenRead(message)"></div>
-                                                  </div>
+                                                  
+                                                  <div class="screenread-btn green-cursor" 
+                                                  *ngIf="session.screenreader"
+                                                  (click)="screenRead(message)"></div>
+                                                  
                                              </div>
 
                                              <div *ngIf="letter.type[i] == 3" class="div-in-li">
@@ -51,6 +53,8 @@
                                              <div *ngIf="!letter.read && session.read" class="notsee-message footer"></div>
                                              <div class="delete-message-btn footer green-cursor" (click)="openDeleteMessage(letter)"></div>
                                         </div>
+                                        <div *ngIf="session.time" class="message_time">{{getDateString(letter.time)}}</div>
+                                        
                                    </div>
 
                                    <div *ngIf="letter.sender != session._id"  
@@ -68,11 +72,9 @@
 
                                              <div *ngIf="letter.type[i] == 2" class="div-in-li">
                                                   <div appEasyLang class="div-text">{{message}}</div>
-                                                  <div class="footer-out">
-                                                       <div class="screenread-btn footer green-cursor" 
-                                                       *ngIf="session.screenreader"
-                                                       (click)="screenRead(message)"></div>
-                                                  </div>
+                                                  <div class="screenread-btn green-cursor" 
+                                                  *ngIf="session.screenreader"
+                                                  (click)="screenRead(message)"></div>
                                              </div>
 
                                              <div *ngIf="letter.type[i] == 3" class="div-in-li">
@@ -94,143 +96,12 @@
                                                   </a>
                                              </div>
                                         </div>
+
+                                        <div *ngIf="session.time" class="message_time">{{getDateString(letter.time)}}</div>
+                                        
                                    </div>
                               </div>
 
-                              <div *ngIf="letters.messagesNotRead.length > 0" class="separator" id="separator"></div>
-
-                              <div *ngFor="let letter of letters.messagesNotRead">
-                                   <div class="inter-message message dark-{{session.firstColor}}-border"
-                                   id="{{letter._id}}">
-                                        <div *ngFor="let message of letter.message; let i = index" class="div-in-li">
-                                             <div *ngIf="letter.type[i] == 1"  class="div-in-li">
-                                                  <img [src]="message" class="div-img green-cursor" (click)="openZoom(message)">
-                                                  <div class="footer-out">
-                                                       <div class="answers-message-btn footer green-cursor" 
-                                                       *ngIf="withAnswers.includes(message) && session.answers"
-                                                       (click)="openAnswers(message)"></div>
-                                                  </div>
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 2" class="div-in-li">
-                                                  <div appEasyLang class="div-text">{{message}}</div>
-                                                  <div class="footer-out">
-                                                       <div class="screenread-btn footer green-cursor" 
-                                                       *ngIf="session.screenreader"
-                                                       (click)="screenRead(message)"></div>
-                                                  </div>
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 3" class="div-in-li">
-                                                  <audio controls  class="div-audio">
-                                                       <source [src]="message">
-                                                  </audio>
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 4" class="div-in-li">
-                                                  <video controls class="div-img">
-                                                       <source [src]="message">
-                                                  </video>
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 5" class="div-in-li">
-                                                  <a [href]="message" class="div-in-li green-cursor" download>
-                                                       <img src="/images/docs.png" class="div-doument"> 
-                                                       <span class="docs" appEasyLang>ДОКУМЕНТ</span>
-                                                  </a>
-                                             </div>
-                                        </div>
-                                   </div>
-                              </div>
-
-                              <div *ngFor="let letter of newMessages">
-                                   <div *ngIf="letter.sender == session._id" 
-                                   class="sender-message message dark-{{session.firstColor}}-border middle-{{session.firstColor}}-bg"
-                                   id="{{letter._id}}">
-                                        <div *ngFor="let message of letter.message; let i = index" class="div-in-li">
-                                             <div *ngIf="letter.type[i] == 1"  class="div-in-li">
-                                                  <img [src]="message" class="div-img green-cursor" (click)="openZoom(message)">
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 2" class="div-in-li">
-                                                  <div appEasyLang class="div-text">{{message}}</div>
-                                                  <div class="footer-out">
-                                                       <div class="screenread-btn footer green-cursor" 
-                                                       *ngIf="session.screenreader"
-                                                       (click)="screenRead(message)"></div>
-                                                  </div>
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 3" class="div-in-li">
-                                                  <audio controls  class="div-audio">
-                                                       <source [src]="message">
-                                                  </audio>
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 4" class="div-in-li">
-                                                  <video controls class="div-img">
-                                                       <source [src]="message">
-                                                  </video>
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 5" class="div-in-li">
-                                                  <a [href]="message" class="div-in-li green-cursor" download>
-                                                       <img src="/images/docs.png" class="div-doument"> 
-                                                       <span class="docs" appEasyLang>ДОКУМЕНТ</span>
-                                                  </a>
-                                             </div>
-                                        </div>
-                                        <div class="footer-out">
-                                             <div *ngIf="letter.read && session.read" class="see-message footer"></div>
-                                             <div *ngIf="!letter.read && session.read" class="notsee-message footer"></div>
-                                             <div class="delete-message-btn footer green-cursor" 
-                                             (click)="openDeleteMessage(letter)"></div>
-                                        </div>
-                                   </div>
-
-                                   <div *ngIf="letter.sender != session._id"  
-                                   class="inter-message message dark-{{session.firstColor}}-border"
-                                   id="{{letter._id}}">
-                                        <div *ngFor="let message of letter.message; let i = index" class="div-in-li">
-                                             <div *ngIf="letter.type[i] == 1"  class="div-in-li">
-                                                  <img [src]="message" class="div-img green-cursor" (click)="openZoom(message)">
-                                                  <div class="footer-out">
-                                                       <div class="answers-message-btn footer green-cursor" 
-                                                       *ngIf="withAnswers.includes(message) && session.answers"
-                                                       (click)="openAnswers(message)"></div>
-                                                  </div>
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 2" class="div-in-li">
-                                                  <div appEasyLang class="div-text">{{message}}</div>
-                                                  <div class="footer-out">
-                                                       <div class="screenread-btn footer green-cursor" 
-                                                       *ngIf="session.screenreader"
-                                                       (click)="screenRead(message)"></div>
-                                                  </div>
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 3" class="div-in-li">
-                                                  <audio controls  class="div-audio">
-                                                       <source [src]="message">
-                                                  </audio>
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 4" class="div-in-li">
-                                                  <video controls class="div-img">
-                                                       <source [src]="message">
-                                                  </video>
-                                             </div>
-
-                                             <div *ngIf="letter.type[i] == 5" class="div-in-li green-cursor">
-                                                  <a [href]="message" class="div-in-li" download>
-                                                       <img src="/images/docs.png" class="div-doument"> 
-                                                       <span class="docs" appEasyLang>ДОКУМЕНТ</span>
-                                                  </a>
-                                             </div>
-                                        </div>
-                                   </div>
-                              </div>
                               <div class="forScroll" id="forScroll"></div>                                                          
                          </div>                        
                     </div>
