--- a/client/src/app/shared/layouts/group-layout/group-layout.component.css
+++ b/client/src/app/shared/layouts/group-layout/group-layout.component.css
@@ -16,7 +16,6 @@
     margin: auto;
 }
 .div-text {
-    max-width: 14vw;
     display: inline-block;
 }
 .div-audio {
@@ -129,8 +128,8 @@
     height: 1px;
 }
 
-.inline-block {
-    display: inline-block;
+.cover {
+    object-fit: cover;
 }
 
 .screenread-btn {
